<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Musica">

    <Button
        android:id="@+id/Stop"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:text="@string/Stop"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Start" />

    <Button
        android:id="@+id/Derrota"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginBottom="262dp"
        android:text="@string/Derrota"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Victoria" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="101dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:text="@string/B"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/Victoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Stop" />

    <Button
        android:id="@+id/Victoria"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Victoria"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/Derrota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/Start"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Start"
        android:textSize="20dp"
        app:iconSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/Stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="101dp"
        android:layout_height="0dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="16dp"
        android:text="@string/A"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>