<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_preferencias">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="81dp"
        android:layout_height="48dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/Preferencias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="105dp"
        android:layout_height="79dp"
        android:text="@string/Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="164dp"
        android:layout_height="140dp"
        android:text="@string/problemas_preferencias"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="336dp" />

</androidx.constraintlayout.widget.ConstraintLayout>